--- a/src/BBComponents/Resources/BbResources.resx
+++ b/src/BBComponents/Resources/BbResources.resx
@@ -117,11 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Add" xml:space="preserve">
+    <value>Add</value>
+  </data>
   <data name="April" xml:space="preserve">
     <value>April</value>
   </data>
   <data name="August" xml:space="preserve">
     <value>August</value>
+  </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="CannotFindItem" xml:space="preserve">
+    <value>Not found</value>
   </data>
   <data name="December" xml:space="preserve">
     <value>December</value>
